# vigtra_backend

./: .coveragerc  .env.example  .gitignore  LICENSE  Makefile  README.md  dev_launch.sh  manage.py  package.json  postcss.config.js  pyproject.toml  pytest.ini  webpack.config.js
code_tests/: contribution_validation_deez_nuts.py  deez_nuts_test.py
implementation/: REPORT.md
modules/authentication/: __init__.py  apps.py  data_loader.py  demo_data_generator.py  models.py  schema.py  tests.py  utils.py
modules/billing/: apps.py
modules/calculation_rule/: apps.py  cal_config.py
modules/claim/: apps.py  schema.py  utils.py
modules/contract/: apps.py
modules/contribution/: apps.py
modules/contribution_plan/: apps.py  demo_data_generator.py  tests.py  utils.py
modules/core/: apps.py  base_demo_generator.py  celery.py  config_manager.py  mailing.py  media_utils.py  module_loader.py  schema.py  service_signals.py  urls.py  utils.py
modules/encounter/: apps.py  models.py
modules/enrollment/: apps.py
modules/fhir_api/: apps.py  urls.py
modules/formal_sector/: apps.py  demo_data_generator.py  models.py  schema.py
modules/grpc_api/: apps.py  handlers.py  services.py
modules/insurance_coverage/: apps.py  models.py  schema.py
modules/insurance_plan/: apps.py  models.py  schema.py
modules/insuree/: apps.py  demo_data_generator.py  models.py  schema.py  tests.py  utils.py
modules/policy/: apps.py  (+2 more)
tests/: base.py  conftest.py
vigtra/: __init__.py  asgi.py  extra_settings.py  routing.py  urls.py  wsgi.py
vigtra_backend/: asgi.py  settings.py  urls.py
(+238 files in other folders)
