[project]
name = "vigtra-backend"
version = "0.1.0"
description = "A better openimis"
authors = [
    {name = "Dawdaborje",email = "dawdaborjekujabi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "graphene-django (>=3.2.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
